--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/pc_service", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/pc-service", "."]
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/pc_service"]
+    args: ["push", "gcr.io/$PROJECT_ID/pc-service"]
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
@@ -10,7 +10,7 @@ steps:
         "deploy",
         "pc_service",
         "--image",
-        "gcr.io/$PROJECT_ID/pc_service",
+        "gcr.io/$PROJECT_ID/pc-service",
         "--port",
         "3100",
         "--region",
