--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,16 +1,16 @@
 steps:
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/pc-service", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/ps4-service", "."]
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/pc-service"]
+    args: ["push", "gcr.io/$PROJECT_ID/ps4-service"]
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       [
         "run",
         "deploy",
-        "pc-service",
+        "ps4-service",
         "--image",
-        "gcr.io/$PROJECT_ID/pc-service",
+        "gcr.io/$PROJECT_ID/ps4-service",
         "--port",
         "3100",
         "--region",
